@@ -8,6 +8,9 @@ ddetect (1.16) UNRELEASED; urgency=low
       + Re-run hotplug rc scripts during hardware detection.
       + Hook into net events so that we can record them for netcfg.
       Requires lspci in udeb form, which isn't yet available (#284110).
+  * Joey Hess
+    - Allow module parameters to be preseeded on a per-module basis, using
+      hw-detect/module_params/$module as the question name.
 
  -- Colin Watson <cjwatson@debian.org>  Tue,  3 May 2005 20:47:21 +0100
 
